syntax = "proto3";
package zynx_policy;

message PackageInfo {
    string package_name = 1;
    bool debuggable = 2;
    string data_dir = 3;
    string seinfo = 4;
    repeated uint32 gids = 5;
}

message CheckArgsFast {
    uint32 uid = 1;
    uint32 gid = 2;
    bool is_system_server = 3;
    bool is_child_zygote = 4;
    repeated PackageInfo package_info = 5;
}

message CheckArgsSlow {
   CheckArgsFast fast = 1;
   optional string nice_name = 2;
   optional string app_data_dir = 3;
}

enum CheckResult {
    ALLOW = 0;
    DENY = 1;
    MORE_INFO = 2;
}